# ai-cover-letter-generator

./: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DATA_SETUP.md  GITHUB_SETUP.md  GOOGLE_SHEETS_SETUP.md  LICENSE  QUICK_START_GITHUB.md  README.md  activate.sh  coverage.json  critique_prompt.txt  pyproject.toml  requirements.txt  revision_prompt.txt  setup_google_drive.sh  system_prompt_claude.txt  system_prompt_claude.txt.example  system_prompt_example.txt  verify_prompt_toolkit.py
.github/workflows/: ci.yml
prompts/: critique_prompt.txt  requirements.txt  system_prompt.txt  system_prompt.txt.example
scripts/: profile_performance.py  rename_google_drive_files.py
src/cover_letter_generator/: __init__.py  analysis.py  cli.py  docx_generator.py  feedback_tracker.py  generator.py  job_parser.py  job_tracker.py  logging_config.py  pdf_generator.py  pdf_generator_template.py  prepare_data.py  scoring.py  signature_validator.py  system_improver.py  ui_components.py  utils.py
tests/: test_analysis_comprehensive.py  test_chunking.py  test_company_extraction.py  test_docx_generator_comprehensive.py  test_generator.py  test_generator_comprehensive.py  test_integration_data_preparation.py  test_integration_scoring.py  test_job_parser.py  test_job_parser_comprehensive.py  test_pdf_generator_comprehensive.py  test_prepare_data_comprehensive.py  test_prompt_loading.py  test_signature_validator.py  test_system_improver.py  test_utils.py
